# pax-utils

./: .cvsignore  .depend  .gitignore  .pylintrc  .travis.yml  BUGS  Makefile  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  dumpelf.c  elf.h  fuzz-ar.c  isetdyn.c  lddtree.py  lddtree.sh  macho.h  make-seccomp-filters.sh  make-tarball.sh  make-xml.sh  meson-build-dist-man.sh  meson.build  meson_options.txt  paxelf.c  paxelf.h  paxinc.c  paxinc.h  paxldso.c  paxldso.h  paxmacho.c  paxmacho.h  porting.h  pspax.c  pttool.c  pylint  pyproject.toml  requirements-dev.txt  (+15 more)
.github/workflows/: build-test-ci.yml  ci-alpine-linux.yml  codespell.yml  coverity.yml  python.yml
man/: Makefile  custom.xsl  dumpelf.1  dumpelf.docbook  isetdyn.1  meson.build  pax-utils.docbook  pax-utils.docbook.in  pspax.1  pspax.docbook  scanelf.1  scanelf.docbook  scanexec.1  scanmacho.docbook
man/fragment/: reftail  version
refs/heads/: main  master  v
refs/tags/: v1.3.10  v1.3.4  v1.3.6  v1.3.7  v1.3.8  v1.3.9
tests/: Makefile  lib.sh
tests/lddtree/: Makefile  dotest-cmp  dotest-sfx  dotest-sh  dotest.cmp  dotest.sfx  dotest.sh  meson.build
tests/pspax/: dotest  meson.build
tests/scanelf/: Makefile  dotest  meson.build  scanelf.simple.good
tests/source/: dotest  meson.build  space  space.py
travis/: autotools.tar.xz  main.sh
