option('lddtree_implementation', type : 'combo', choices : ['python', 'sh', 'none'], value : 'python')
option('use_libcap', type : 'feature', value : 'auto')
option('use_seccomp', type : 'boolean', value : 'true',
  description : 'Enable seccomp filters at runtime (does *not* require libseccomp)'
)
option('build_manpages', type : 'feature', value : 'auto',
  description : 'Build manuals via DocBook (requires xmlto)')
option('tests', type : 'boolean', value : 'true')
option('use_fuzzing', type : 'boolean', description : 'Also build LibFuzzer fuzzers', value : 'true')
